fix: cropped shadow

--- a/styles/AppointmentModal.module.css
+++ b/styles/AppointmentModal.module.css
@@ -15,6 +15,7 @@
 }
 
 .dateTimeSection {
+  height: 100%;
   width: 100%;
   max-width: 1000px;
   display: flex;
